--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <title>Text To Voice Converter</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <div class="hero">
+    <div class="main">
       <h1>Text To Voice <span>Converter</span></h1>
       <textarea placeholder="Enter a message"></textarea>
       <div class="row">
